--- a/package.json
+++ b/package.json
@@ -3,33 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.11.13",
+    "@emotion/react": "11.10.6",
+    "@emotion/styled": "11.10.6",
+    "@fontsource/roboto": "4.5.8",
+    "@mui/icons-material": "5.11.11",
+    "@mui/material": "5.11.15",
+    "@mui/styled-engine-sc": "5.11.11",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.4",
+    "axios": "1.3.4",
+    "chalk": "5.2.0",
     "cross-env": "^7.0.3",
+    "date-fns": "2.29.3",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "fg-loadcss": "^3.1.0",
+    "fg-loadcss": "3.1.0",
     "formik": "^2.2.9",
     "i18next": "^22.4.13",
     "i18next-browser-languagedetector": "^7.0.1",
-    "i18next-scanner": "^4.2.0",
+    "i18next-scanner": "4.2.0",
     "inquirer": "^9.1.5",
     "inquirer-directory": "^2.2.0",
     "jquery": "^3.6.4",
-    "lint-staged": "^13.2.0",
-    "lodash": "^4.17.21",
+    "lint-staged": "13.2.0",
+    "lodash": "4.17.21",
     "lottie-react": "^2.4.0",
     "node-plop": "^0.31.1",
     "plop": "^3.1.2",
     "prettier": "^2.8.7",
-    "prop-types": "^15.8.1",
+    "prop-types": "15.8.1",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-dom": "^18.2.0",
@@ -49,7 +54,7 @@
     "sanitize.css": "^13.0.0",
     "serve": "^14.2.0",
     "shelljs": "^0.8.5",
-    "styled-components": "^5.3.9",
+    "styled-components": "5.3.9",
     "stylelint": "^15.3.0",
     "stylelint-config-recommended": "^11.0.0",
     "stylelint-config-styled-components": "^0.1.1",
@@ -63,6 +68,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start:prod": "yarn run build && serve -s build",
+    "checkTs": "tsc --noEmit",
+    "eslint": "eslint --ext js,jsx",
     "lint": "yarn run eslint src",
     "lint:fix": "yarn run eslint --fix src",
     "lint:css": "stylelint src/**/*.css",
@@ -84,6 +91,17 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "engines": {
+    "node": ">=18.x"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "yarn run eslint --fix"
+    ],
+    "*.{md,json}": [
+      "prettier --write"
     ]
   }
 }
